--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,4 @@
 #define VERSION_MAJOR @VERSION_MAJOR@
 #define VERSION_MINOR @VERSION_MINOR@
 
-#cmakedefine LUA52_FOUND
-#ifdef LUA52_FOUND
-#define HAVE_LUA
-#endif //LUA52_FOUND
+#cmakedefine USE_SDL
