Made metacombi SIGUSR1-aware
- Moved programs into a separate directory
- Emitted log messages to stderr to simplify monitoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,5 +39,5 @@ endif(DOXYGEN_FOUND)
 include(tests/tests.cmake)
 
 file(GLOB Source src/*.cpp src/metaheuristics/*.cpp)
-add_executable(metacombi ${Source})
+add_executable(metacombi ${Source} src/programs/metacombi.cpp)
 set_target_properties(metacombi PROPERTIES LINKER_LANGUAGE CXX)
